- fix:  https://github.com/padreati/rapaio-jupyter-kernel/issues/73 which enables one to alter the classpath for each launched kernel